# smartcarsim

./: .gitignore  .gitmodules  LICENSE  README.md
ai/: CMakeLists.txt
ai/include/: scs.h  vector.h
ai/src/: main.cpp
ai/track/: final8.trk  province8.trk
doc/: ChangeLog.TXT  INSTALL.TXT  NEWS.TXT
doc/src/: Makefile  SCS-1.0.1.tex
scs/: CMakeLists.txt
scs/include/: api.h  car.h  common.h  draw.h  key.h  mytime.h  simulation.h  track.h  ui.h  vector.h
scs/src/: api.cpp  car.cpp  draw.cpp  simulation.cpp  track.cpp  ui.cpp  vector.cpp
